# pepper

./: .gitignore  Makefile  README.md  adapters.go  bidi.go  call.go  capability.go  comb.hcl  config.go  const.go  constructors.go  exports.go  find.go  fn.go  go.mod  go.sum  invoke.go  pdeathsig_linux.go  pdeathsig_other.go  pdeathsig_windows.go  pepper.go  pepper_cluster_diag_test.go  pepper_cluster_isolation_test.go  pepper_cluster_test.go  pepper_flow_test.go  pepper_real_test.go  pepper_runtime.go  pepper_test.go  pipeline.go  result.go  runtime.go  session.go  stream.go  tools.go  types.go  worker.go
.github/workflows/: go.yml
cmd/pepper/: main.go
example/: main.go
inspect/: event.go  filter.go  inspect.go
internal/blob/: blob.go  blob_test.go  manager.go  remote.go
internal/bus/: bus.go  bus_suite_test.go  bus_test.go  coord.go  coord_test.go  mock.go  mula.go  mula_pipeline_test.go  mula_test.go  nano.go  nano_test.go  nats.go  nats_test.go  redis.go  redis_test.go
internal/codec/: codec.go  codec_test.go  json.go  msgpack.go
internal/compose/: compose.go  composte_test.go  dag.go  dag_pipeline_test.go  dag_test.go
internal/coord/: coord.go  coord_suite_test.go  coord_test.go  memory.go  memory_test.go  (+7 more)
internal/runtime/python/: pyproject.toml  runtime.py  test_cap.py  test_runtime.py  test_transport.py
runtime/python/: cap.py  pyproject.toml  runtime.py  test_cap.py  test_runtime.py  test_transport.py  transport.py
tests/: cluster_diag_test.go  cluster_isolation_test.go  cluster_test.go  flow_test.go  nomic_test.go  real_test.go  test.go
(+70 files in other folders)
