[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "pepper-runtime"
version = "0.1.0"
description = "Pepper Python worker runtime"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    # Optional: install to get live integration tests against real services.
    # Tests skip gracefully when these are absent or the service is down.
    "nats-py>=2.6",
    "redis>=4.0",
]
nomic = [
    # nomic>=3.x uses Python 3.10+ syntax (X|Y unions, list[str] generics).
    # Install with: pip install "pepper-runtime[nomic]"
    "nomic>=3.0.0",
    "msgpack>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["."]
timeout = 30